[gd_scene load_steps=15 format=3 uid="uid://trf2sfjwl42b"]

[ext_resource type="FontFile" uid="uid://1e460hymjugv" path="res://PublicPixel-E447g.ttf" id="1_27dus"]
[ext_resource type="Script" path="res://crafting.gd" id="1_cxnn0"]
[ext_resource type="Texture2D" uid="uid://c2vw1xxj0cani" path="res://art/materials.png" id="2_7idw0"]
[ext_resource type="PackedScene" uid="uid://dg0gon5cburv5" path="res://card_button.tscn" id="4_6epq8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i2fhc"]
bg_color = Color(0.619608, 0.482353, 0.278431, 0.631373)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vhtj8"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7cna7"]
bg_color = Color(0.207347, 0.151252, 0.0668619, 0.631373)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pamyo"]
bg_color = Color(0.619608, 0.482353, 0.278431, 0.631373)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ryso"]
bg_color = Color(0.933333, 0.788235, 0.572549, 0.568627)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sdjh"]
atlas = ExtResource("2_7idw0")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yfdc"]
atlas = ExtResource("2_7idw0")
region = Rect2(16, 0, 16, 16)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wsjyf"]
bg_color = Color(0.155655, 0.560503, 0.794861, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cmujx"]
bg_color = Color(0.792375, 0.539899, 0.231898, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vpmia"]
bg_color = Color(0.619608, 0.482353, 0.278431, 0.631373)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cxnn0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="TabContainer" type="TabContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_27dus")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_i2fhc")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_vhtj8")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_7cna7")
tab_alignment = 1
current_tab = 0

[node name="Craft" type="Panel" parent="MarginContainer/TabContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pamyo")
metadata/_tab_index = 0

[node name="VScrollBar" type="VScrollBar" parent="MarginContainer/TabContainer/Craft"]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/TabContainer/Craft"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
dragger_visibility = 1

[node name="Panel" type="Panel" parent="MarginContainer/TabContainer/Craft/HSplitContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6ryso")

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/TabContainer/Craft/HSplitContainer/Panel"]
layout_mode = 0
offset_left = 36.0
offset_right = 128.0
offset_bottom = 524.0
theme_override_fonts/normal_font = ExtResource("1_27dus")
theme_override_font_sizes/normal_font_size = 32
text = "100"
scroll_active = false
autowrap_mode = 0
text_direction = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="MarginContainer/TabContainer/Craft/HSplitContainer/Panel"]
layout_mode = 0
offset_left = 36.0
offset_top = 38.0
offset_right = 120.0
offset_bottom = 524.0
theme_override_fonts/normal_font = ExtResource("1_27dus")
theme_override_font_sizes/normal_font_size = 32
text = "0"
text_direction = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/TabContainer/Craft/HSplitContainer/Panel"]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_0sdjh")
stretch_mode = 2

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/TabContainer/Craft/HSplitContainer/Panel"]
layout_mode = 0
offset_top = 38.0
offset_right = 16.0
offset_bottom = 54.0
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_0yfdc")
stretch_mode = 2

[node name="RichTextLabel3" type="RichTextLabel" parent="MarginContainer/TabContainer/Craft/HSplitContainer/Panel"]
layout_mode = 0
offset_top = 118.0
offset_right = 120.0
offset_bottom = 604.0
theme_override_fonts/normal_font = ExtResource("1_27dus")
theme_override_font_sizes/normal_font_size = 16
text = "Current
Card"
text_direction = 1

[node name="RichTextLabel4" type="RichTextLabel" parent="MarginContainer/TabContainer/Craft/HSplitContainer/Panel"]
layout_mode = 0
offset_top = 182.0
offset_right = 120.0
offset_bottom = 668.0
theme_override_fonts/normal_font = ExtResource("1_27dus")
theme_override_font_sizes/normal_font_size = 16
text = "Cost"
text_direction = 1

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/TabContainer/Craft/HSplitContainer/Panel"]
layout_mode = 0
offset_top = 206.0
offset_right = 16.0
offset_bottom = 222.0
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_0sdjh")
stretch_mode = 2

[node name="RichTextLabel5" type="RichTextLabel" parent="MarginContainer/TabContainer/Craft/HSplitContainer/Panel"]
layout_mode = 0
offset_left = 36.0
offset_top = 214.0
offset_right = 156.0
offset_bottom = 700.0
theme_override_fonts/normal_font = ExtResource("1_27dus")
theme_override_font_sizes/normal_font_size = 16
text = "0
"
text_direction = 1

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/TabContainer/Craft/HSplitContainer/Panel"]
layout_mode = 0
offset_top = 238.0
offset_right = 16.0
offset_bottom = 254.0
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_0yfdc")
stretch_mode = 2

[node name="RichTextLabel6" type="RichTextLabel" parent="MarginContainer/TabContainer/Craft/HSplitContainer/Panel"]
layout_mode = 0
offset_left = 36.0
offset_top = 246.0
offset_right = 156.0
offset_bottom = 732.0
theme_override_fonts/normal_font = ExtResource("1_27dus")
theme_override_font_sizes/normal_font_size = 16
text = "0
"
text_direction = 1

[node name="RichTextLabel7" type="RichTextLabel" parent="MarginContainer/TabContainer/Craft/HSplitContainer/Panel"]
layout_mode = 0
offset_top = 286.0
offset_right = 120.0
offset_bottom = 772.0
theme_override_fonts/normal_font = ExtResource("1_27dus")
theme_override_font_sizes/normal_font_size = 16
text = "Stats"
text_direction = 1

[node name="RichTextLabel8" type="RichTextLabel" parent="MarginContainer/TabContainer/Craft/HSplitContainer/Panel"]
layout_mode = 0
offset_top = 350.0
offset_right = 120.0
offset_bottom = 812.0
theme_override_fonts/normal_font = ExtResource("1_27dus")
theme_override_font_sizes/normal_font_size = 16
text = "DMG:
BLANK"
text_direction = 1

[node name="RichTextLabel9" type="RichTextLabel" parent="MarginContainer/TabContainer/Craft/HSplitContainer/Panel"]
layout_mode = 0
offset_top = 398.0
offset_right = 120.0
offset_bottom = 884.0
theme_override_fonts/normal_font = ExtResource("1_27dus")
theme_override_font_sizes/normal_font_size = 16
text = "RANGE:
BLANK"
text_direction = 1

[node name="RichTextLabel10" type="RichTextLabel" parent="MarginContainer/TabContainer/Craft/HSplitContainer/Panel"]
layout_mode = 0
offset_top = 310.0
offset_right = 120.0
offset_bottom = 350.0
theme_override_fonts/normal_font = ExtResource("1_27dus")
theme_override_font_sizes/normal_font_size = 16
text = "NAME:
BLANK"
text_direction = 1

[node name="Button" type="Button" parent="MarginContainer/TabContainer/Craft/HSplitContainer/Panel"]
layout_mode = 0
offset_left = 12.0
offset_top = 446.0
offset_right = 108.0
offset_bottom = 504.0
theme_override_fonts/font = ExtResource("1_27dus")
theme_override_styles/hover = SubResource("StyleBoxFlat_wsjyf")
theme_override_styles/normal = SubResource("StyleBoxFlat_cmujx")
text = "Craft"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/TabContainer/Craft/HSplitContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="MarginContainer/TabContainer/Craft/HSplitContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/v_separation = 24
columns = 6

[node name="CardButton" parent="MarginContainer/TabContainer/Craft/HSplitContainer/MarginContainer/GridContainer" instance=ExtResource("4_6epq8")]
layout_mode = 2
cardName = "Butt"
wood = 3
rock = 2
dmglow = 1
dmghigh = 6
range = 2

[node name="CardButton2" parent="MarginContainer/TabContainer/Craft/HSplitContainer/MarginContainer/GridContainer" instance=ExtResource("4_6epq8")]
layout_mode = 2

[node name="CardButton3" parent="MarginContainer/TabContainer/Craft/HSplitContainer/MarginContainer/GridContainer" instance=ExtResource("4_6epq8")]
layout_mode = 2

[node name="CardButton4" parent="MarginContainer/TabContainer/Craft/HSplitContainer/MarginContainer/GridContainer" instance=ExtResource("4_6epq8")]
layout_mode = 2

[node name="CardButton5" parent="MarginContainer/TabContainer/Craft/HSplitContainer/MarginContainer/GridContainer" instance=ExtResource("4_6epq8")]
layout_mode = 2

[node name="CardButton6" parent="MarginContainer/TabContainer/Craft/HSplitContainer/MarginContainer/GridContainer" instance=ExtResource("4_6epq8")]
layout_mode = 2

[node name="CardButton7" parent="MarginContainer/TabContainer/Craft/HSplitContainer/MarginContainer/GridContainer" instance=ExtResource("4_6epq8")]
layout_mode = 2

[node name="Deck" type="Panel" parent="MarginContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vpmia")
metadata/_tab_index = 1

[connection signal="pressed" from="MarginContainer/TabContainer/Craft/HSplitContainer/Panel/Button" to="." method="_on_button_pressed"]
